created architecture of client-side functions and click listeners

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -31,7 +31,7 @@
     <tr class="row">
         <th class="col-11 align-content-center">Task Category</th>
         <th class="col-1">
-            <button type="button" class="btn btn-outline-secondary btn-sm mx-3">Edit</button>
+            <button type="button" id ="editButton" class="btn btn-outline-secondary btn-sm mx-3">Edit</button>
         </th>
     </tr>
     <tr class="row">
@@ -39,10 +39,10 @@
         <div class="col-1">
             <div class="row">
                 <td class="col" class="tableButton">
-                    <input class="form-check-input-lg" type="checkbox" value="" id="flexCheckDefault">
+                    <input type="checkbox" class="form-check-input-lg" class="checkButton"/>
                 </td>
                 <td class="col" class="tableButton">
-                    <button type="button" class="btn-close btn-sm" data-bs-toggle="popover" data-bs-title="Delete" data-bs-content="Are you sure you want to delete?"></button>
+                    <button type="button" class="btn-close btn-sm" class="deleteButton"></button>
                 </td>
             </div>
         </div>
