--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <link rel="stylesheet" href="styles/style.css"/>
     <script src="scripts/jQuery.js"></script>
@@ -19,21 +19,23 @@
 </head>
 
 <body class="container-fluid">
-<header class="row">
-    <h1>To-Do List</h1>
-</header>
-<section id="inputs" class="row justify-content-center gap-2 my-3">
-    <input type="text" id="taskIn" class="col-4 my-2" placeholder="To Do..." />
-    <button type="button" id="submitButton" class="btn-outline-secondary-sm col-1 my-2" >Submit</button>
-</section>
-<section class="row m-5">
-<table id="tableBody" class="table">
-    <tr class="row">
-        <th class="col-11 align-content-center">Task Category</th>
-        <th class="col-1">
-            <button type="button" id ="editButton" class="btn btn-outline-secondary btn-sm mx-3">Edit</button>
-        </th>
-    </tr>
+    <header class="row">
+        <h1>To-Do List</h1>
+    </header>
+    <section id="inputs" class="row justify-content-center gap-2 my-3">
+        <input type="text" id="taskIn" class="col-4 my-2" placeholder="To Do..." required/>
+        <button type="button" class="btn btn-outline-secondary btn-sm col-1" id="submitButton">Submit</button>
+    </section>
+    <section class="row m-5">
+        <table id="tableBody">
+            <tr class="row align-items-start" id="listTitle">
+                <th class="col-10" id="taskCategory">List Title</th>
+                <th class="col-1">
+                    <button type="button" id ="editButton" class="btn btn-outline-secondary btn-sm mx-3">Edit</button>
+                </th>
+            </tr>
+            <tr id="listItems">
+            </tr>
     </section>  
-    </body>
+</body>
 </html>
