final CSS and edited readme

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -18,24 +18,23 @@
     <title>To-Do List</title>
 </head>
 
-<body class="container-fluid">
-    <header class="row">
+<body class="container-auto-text-center">
+    <header class="row m-0">
         <h1>To-Do List</h1>
     </header>
-    <section id="inputs" class="row justify-content-center gap-2 my-3">
-        <input type="text" id="taskIn" class="col-4 my-2" placeholder="To Do..." required/>
+    <section id="inputs" class="row justify-content-center m-3">
+        <input type="text" class="col-3" id="taskIn" placeholder="To Do..." required/>
         <button type="button" class="btn btn-outline-secondary btn-sm col-1" id="submitButton">Submit</button>
     </section>
-    <section class="row m-5">
-        <table id="tableBody">
-            <tr class="row align-items-start" id="listTitle">
-                <th class="col-10" id="taskCategory">List Title</th>
-                <th class="col-1">
-                    <button type="button" id ="editButton" class="btn btn-outline-secondary btn-sm mx-3">Edit</button>
-                </th>
-            </tr>
-            <tr id="listItems">
-            </tr>
-    </section>  
+    <table id="tableBody" class="container">
+        <tr id="listTitle">
+            <th id="taskCategory">List Title</th>
+            <!-- <th>
+                <button type="button" id ="editButton" class="col-1 btn btn-outline-secondary btn-sm mx-3">Edit</button>
+            </th>            //taken out until functionality works/styling is fixed -->
+        </tr>
+        <tr id="listItems">
+        </tr>
+    <table>
 </body>
 </html>
