--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <!-- sweetalert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <link rel="stylesheet" href="styles/style.css"/>
@@ -18,6 +19,7 @@
     <title>To-Do List</title>
 </head>
 
+<!-- Misc classes due to Bootstrap -->
 <body class="container-auto-text-center">
     <header class="row m-0">
         <h1>To-Do List</h1>
@@ -28,7 +30,7 @@
     </section>
     <table id="tableBody" class="container">
         <tr id="listTitle">
-            <th id="taskCategory">List Title</th>
+            <th id="taskCategory">On my list:</th>
             <!-- <th>
                 <button type="button" id ="editButton" class="col-1 btn btn-outline-secondary btn-sm mx-3">Edit</button>
             </th>            //taken out until functionality works/styling is fixed -->
